# CLRInstrumentationEngine

./: InstrumentationEngine.sln  build.ps1
.github/workflows/: build.yml  scorecards.yml
InstanaPS/: InstanaPS.vcxproj
src/: CMakeLists.txt
src/Common.Lib/: Common.Lib.vcxproj  NewSample.cpp  NewSample.h
src/Tests/InstanaInstrumentation_trial/: InstanaInstrumentation.vcxproj  stdafx.h
src/Tests/InstanaPlugin/: CMakeLists.txt  CMakeLists_IndependentBuild.txt  InstanaInstrumentation.cpp  InstanaInstrumentation.h  InstanaInstrumentationMethod.xml  InstanaInstrumentationMethodEntry.h  InstanaInstrumentationMethod_x64.xml  InstanaInstrumentationMethod_x86.xml  InstanaPlugin.vcxproj  InstrumentationEngineApi.cpp  InstrumentationEngineString.h  ModuleInfo.h  NaglerInstrumentationMethod.vcxproj  SystemUtils.cpp  SystemUtils.h  Util.h  dllmain.cpp  resource.h  stdafx.h
src/Tests/InstanaPlugin/build-linx/: CMakeCache.txt  Makefile  cmake_install.cmake
src/build-linux/: CMakeCache.txt
